crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_artifact_metadata.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
::debug::Generated artifact: target/debug/deps/libmylib.rmeta (metadata)
