crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_error_with_code.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
::error file=src/main.rs,line=3,col=9,endLine=3,endColumn=10,title=error: unused_variables::unused variable: `x`
