crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_section_timing_start.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
::debug::Compilation section codegen start: codegen (1234567μs)
