crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_unused_externs_deny.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
::error title=Unused Dependencies::Unused dependencies: unused_crate
