crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_warning_without_code.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
::warning file=src/lib.rs,line=1,col=5,endLine=1,endColumn=13,title=warning::unused import: `std::io`
