crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@build_finished_success.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
Build finished successfully
