crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@build_script_executed.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
Build script executed: mypackage 0.1.0 (path+file:///path/to/package)
