crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@build_script_executed_minimal.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
Build script executed: simple 1.0.0
