crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@compiler_artifact_built_target_bin_profile_debug.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
Built artifact: myapp (bin)
